After requested edits

--- a/ar/diagnosis.html
+++ b/ar/diagnosis.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="http://192.168.1.57/project/github/bts/">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -126,7 +126,7 @@
           <h2 class="h1 fw-bold display-4 text-animate pb-2">التشخيص</h2>
 
 
-            <p class="fs-4 mb-2 fw-bold">الاعراض</p>
+            <p class="fs-4 mb-0 fw-bold">الأعراض</p>
             <p>عادة ما يتم تشخيص فرط التعرق الإبطي الأولي الشديد عندما يكون الشخص قد عانى على الأقل 6 أشهر من التعرق المفرط تحت الإبط (بدون سبب معروف) ولديه أيضًا خاصيتان أخريان على الأقل مذكورتان أدناه:<sup>1</sup></p>
             <ul class="custom-icon-list list-icon-1">
               <li>كلا الإبطين يتأثران</li>
@@ -136,22 +136,22 @@
               <li>وجود تاريخ عائلي من التعرق المفرط</li>
               <li>لا يحدث التعرق المفرط أثناء النوم</li>
             </ul>
-            <p class="fs-4 mb-2 fw-bold">الاختبارات</p>
+            <p class="fs-4 mb-0 fw-bold">الاختبارات</p>
             <p>قد تحتاج إلى اختبار واحد أو أكثر للمساعدة في تحديد سبب التعرق الشديد بجسمك. قد تؤكد اختبارات الدم أو البول أو تستبعد وجود حالة طبية أساسية.
 قد يوصي مزودك أيضًا بإجراء اختبار لقياس كمية العرق التي ينتجها جسمك. تشمل هذه الاختبارات:</p>
 
             <div class="d-flex justify-content-start">
               <div class="pe-2">
-                <img width="50" src="assets/img/icon/diagnosis/starch-icon.svg" alt="starch icon">
+                <img class="flip-img-only-ar" width="50" src="assets/img/icon/diagnosis/starch-icon.svg" alt="starch icon">
               </div>
-              <p class="fs-5 mb-2 fw-bold">اختبار النشا واليود:</p>
+              <p class="fs-5 mb-0 fw-bold">اختبار النشا واليود:</p>
             </div>
             <p>يطبق هذا الاختبار بوضع محلول اليود على المنطقة المتعرقة ويرش النشا فوق محلول اليود. عندما يكون لديك تعرق زائد، يتحول المحلول إلى اللون الأزرق الداكن.</p>
             <div class="d-flex justify-content-start">
               <div class="pe-2">
-                <img width="50" src="assets/img/icon/diagnosis/paper-icon.svg" alt="paper icon">
+                <img class="flip-img-only-ar" width="50" src="assets/img/icon/diagnosis/paper-icon.svg" alt="paper icon">
               </div>
-              <p class="fs-5 mb-2 fw-bold">اختبار الورق:</p>
+              <p class="fs-5 mb-0 fw-bold">اختبار الورق:</p>
             </div>
             <p>يطبق هذا الاختبار بوضع ورق خاص على المنطقة المصابة لامتصاص العرق. في وقت لاحق، يقوم المختص بوزن الورق لتحديد مقدار التعرق.<sup>2</sup></p>
 
@@ -175,11 +175,25 @@
     <div class="col-xl-10">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-8 col-lg-6 col-md-8 py-4">
-          <h2 class="h1 fw-bold display-4 text-animate">مراجع:</h2>
-          <ol class="font-en">
-            <li>Hornberger J et al. J Am Acad Dermatol 2004;51:274−286.</li>
-            <li><a class="text-dark" href="https://my.clevelandclinic.org/health/diseases/17113-hyperhidrosis#diagnosis-and-tests" target="_blank">https://my.clevelandclinic.org/health/diseases/17113-hyperhidrosis#diagnosis-and-tests</a> last accessed (Feb 2023).</li>
-          </ol>
+
+          <div class="accordion accordion-flush">
+            <div class="accordion-item mb-1 border-0">
+              <div class="accordion-header">
+                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="false" aria-controls="flush-collapse0">
+                  مراجع:
+                </button>
+              </div>
+              <div id="flush-collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+                <div class="accordion-body">
+                  <ol class="font-en">
+                    <li>Hornberger J et al. J Am Acad Dermatol 2004;51:274−286.</li>
+                    <li><a class="text-dark" href="https://my.clevelandclinic.org/health/diseases/17113-hyperhidrosis#diagnosis-and-tests" target="_blank">https://my.clevelandclinic.org/health/diseases/17113-hyperhidrosis#diagnosis-and-tests</a> last accessed (Feb 2023).</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
         <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
           <div class="row d-flex justify-content-center align-items-center">
@@ -210,7 +224,7 @@
 
       <div class="col-md-4 pb-5 pb-md-0">
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">البنود و الظروف</a></li>
+          <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
         </ul>
       </div>
 
@@ -231,7 +245,7 @@
   <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
 </ul>
         </div>
-        <p class="text-white fs-7">© 2023 <a class="text-white text-underline" href="https://www.allerganaesthetics.com/" target="_blank">Allergan Aesthetics</a>. جميع الحقوق محفوظة. جميع العلامات التجارية هي ملك لأصحابها.</p>
+        <p class="text-white fs-7 font-en text-start">© 2023 <a class="text-white text-underline" href="https://www.allerganaesthetics.com/" target="_blank">Allergan Aesthetics</a>. All rights reserved. All trademarks are the property of their respective owners.</p>
       </div>
 
     </div>
