--- a/ar/surgical-other-procedures.html
+++ b/ar/surgical-other-procedures.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="http://192.168.1.57/project/github/bts/">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -138,50 +138,47 @@
 
         <div class="col-lg-4">
           <div class="row d-flex justify-content-center align-items-center pt-3">
-            <div class="col-10 text-center">
+            <div class="col-md-10 text-center">
               <img width="200" src="assets/img/icon/surgical/surgical-1.svg" alt="surgical icon">
+              <p class="fs-4 mb-2 fw-bold text-center">إزالة غدة العرق</p>
+              <p>إذا كنت تتعرق بشدة في الإبط فقط، فقد يقترح الطبيب الخاص بك إزالة تلك الغدد العرقية. يمكن القيام بذلك من خلال كشطها أو شفطها أو باستخدام مزيج من الاثنين (الكشط والشفط).<sup>1</sup></p>
             </div>
           </div>
-
-                      <p class="fs-4 mb-2 fw-bold text-center">إزالة غدة العرق</p>
-            <p>إذا كنت تتعرق بشدة في الإبط فقط، فقد يقترح الطبيب الخاص بك إزالة تلك الغدد العرقية. يمكن القيام بذلك من خلال كشطها أو شفطها أو باستخدام مزيج من الاثنين (الكشط والشفط).<sup>1</sup></p>
 
         </div>
 
         <div class="col-lg-4 pt-4 pt-lg-0">
           <div class="row d-flex justify-content-center align-items-center pt-3">
-            <div class="col-10 text-center">
+            <div class="col-md-10 text-center">
               <img width="200" src="assets/img/icon/surgical/surgical-2.svg" alt="surgical icon">
+              <p class="fs-4 mb-2 fw-bold text-center">جراحة الأعصاب</p>
+              <p>جراحة الأعصاب هي إجراء يقوم فيه الجراح بإزالة جزء صغير من الأعصاب الشوكية التي تتحكم في تعرق يديك. على الرغم من أنه يمكن أن يساعد في تقليل التعرق المفرط في يديك، إلا أن أحد الآثار الجانبية المحتملة هو أنك قد تعاني من التعرق الشديد في مناطق أخرى من جسمك بشكل دائم، وهو ما يسمى التعرق التعويضي.</p>
+              <p>هناك نوع مختلف من هذا الإجراء يعالج التعرق المفرط في راحة اليد، والذي يقطع الإشارات العصبية دون إزالة العصب الودي.</p>
+              <p>بشكل عام، لا يتم أخذ جراحة الأعصاب في الاعتبار إلا للأشخاص الذين جربوا العلاجات الأخرى دون نجاح نظرًا لوجود مخاطر من الآثار الجانبية والمضاعفات.</p>
+              <p>من الضروري التشاور مع طبيبك الخاص لتحديد ما إذا كان هذا الإجراء هو الخيار الأفضل لك.<sup>1</sup></p>
             </div>
           </div>
-
-
-            <p class="fs-4 mb-2 fw-bold text-center">جراحة الأعصاب</p>
-            <p>جراحة الأعصاب هي إجراء يقوم فيه الجراح بإزالة جزء صغير من الأعصاب الشوكية التي تتحكم في تعرق يديك. على الرغم من أنه يمكن أن يساعد في تقليل التعرق المفرط في يديك، إلا أن أحد الآثار الجانبية المحتملة هو أنك قد تعاني من التعرق الشديد في مناطق أخرى من جسمك بشكل دائم، وهو ما يسمى التعرق التعويضي.</p>
-            <p>هناك نوع مختلف من هذا الإجراء يعالج التعرق المفرط في راحة اليد، والذي يقطع الإشارات العصبية دون إزالة العصب الودي.</p>
-            <p>بشكل عام، لا يتم أخذ جراحة الأعصاب في الاعتبار إلا للأشخاص الذين جربوا العلاجات الأخرى دون نجاح نظرًا لوجود مخاطر من الآثار الجانبية والمضاعفات.</p>
-            <p>من الضروري التشاور مع طبيبك الخاص لتحديد ما إذا كان هذا الإجراء هو الخيار الأفضل لك.<sup>1</sup></p>
 
                   </div>
 
         <div class="col-lg-4 pt-4 pt-lg-0">
           <div class="row d-flex justify-content-center align-items-center pt-3">
-            <div class="col-10 text-center">
+            <div class="col-md-10 text-center">
               <img width="200" src="assets/img/icon/surgical/surgical-3.svg" alt="surgical icon">
+              <p class="fs-4 mb-2 fw-bold text-center">العلاج بالموجات الدقيقة</p>
+              <p>مع هذا العلاج، يوفر جهاز محمول باليد طاقة الميكروويف لتدمير الغدد العرقية في الإبط. تشمل العلاجات جلستين مدة كل منهما ٢٠ إلى ٣٠ دقيقة، تفصل بينهما ثلاثة أشهر.</p>
+              <p>الآثار الجانبية المحتملة هي تغيير في الإحساس بالجلد وبعض الانزعاج. الآثار الجانبية طويلة المدى غير معروفة.<sup>1</sup></p>
             </div>
           </div>
-
-
-            <p class="fs-4 mb-2 fw-bold text-center">العلاج بالموجات الدقيقة</p>
-            <p>مع هذا العلاج، يوفر جهاز محمول باليد طاقة الميكروويف لتدمير الغدد العرقية في الإبط. تشمل العلاجات جلستين مدة كل منهما ٢٠ إلى ٣٠ دقيقة، تفصل بينهما ثلاثة أشهر.</p>
-            <p>الآثار الجانبية المحتملة هي تغيير في الإحساس بالجلد وبعض الانزعاج. الآثار الجانبية طويلة المدى غير معروفة.<sup>1</sup></p>
 
 
         </div>
 
         <div class="col-12 col-lg-10 pt-3">
-                      <p class="font-en bg-secondary px-2 py-2 text-white">All treatment options are to be discussed and recommend by your doctor based on many factors. This is just for educational purpose; your doctor will be the best judge to provide you the most appropriate treatment for your condition.</p>
-                  </div>
+          <p class="bg-secondary px-2 py-2 text-white">
+            يجب مناقشة جميع خيارات العلاج والتوصية بها من قبل طبيبك بناءً على العديد من العوامل. هذا لغرض تعليمي فقط، سيكون الممارس الصحي الخاص بك هو أفضل قاضٍ ليقدم لك العلاج الأنسب لحالتك.
+          </p>
+        </div>
       </div>
     </div>
   </div>
@@ -194,10 +191,25 @@
     <div class="col-xl-10">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-8 col-lg-6 col-md-8 py-4">
-          <h2 class="h1 fw-bold display-4 text-animate">مراجع:</h2>
-          <ol class="font-en">
-            <li><a class="text-dark" href="https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173" target="_blank">https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173</a> last accessed (May 2023).</li>
-          </ol>
+
+          <div class="accordion accordion-flush">
+            <div class="accordion-item mb-1 border-0">
+              <div class="accordion-header">
+                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="false" aria-controls="flush-collapse0">
+                  مراجع:
+                </button>
+              </div>
+              <div id="flush-collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+                <div class="accordion-body">
+                  <ol class="font-en">
+                    <li><a class="text-dark" href="https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173" target="_blank">https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173</a> last accessed (May 2023).</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
         </div>
         <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
           <div class="row d-flex justify-content-center align-items-center">
@@ -228,7 +240,7 @@
 
       <div class="col-md-4 pb-5 pb-md-0">
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">البنود و الظروف</a></li>
+          <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
         </ul>
       </div>
 
@@ -249,7 +261,7 @@
   <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
 </ul>
         </div>
-        <p class="text-white fs-7">© 2023 <a class="text-white text-underline" href="https://www.allerganaesthetics.com/" target="_blank">Allergan Aesthetics</a>. جميع الحقوق محفوظة. جميع العلامات التجارية هي ملك لأصحابها.</p>
+        <p class="text-white fs-7 font-en text-start">© 2023 <a class="text-white text-underline" href="https://www.allerganaesthetics.com/" target="_blank">Allergan Aesthetics</a>. All rights reserved. All trademarks are the property of their respective owners.</p>
       </div>
 
     </div>
