--- a/ar/terms-and-conditions.html
+++ b/ar/terms-and-conditions.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="http://192.168.1.57/project/github/bts/">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -129,12 +129,14 @@
     <div class="col-lg-8">
       <div class="ps-3">
         <div class="privacy-policy pb-5">
-          <h3 class="fw-bold">سياسة الخصوصية</h3>
-          <a class="btn bg-dark text-white px-4" href="https://privacy.abbvie/privacy-policies.html" target="_blank">انقر هنا</a>
+          <a class="text-underline text-dark d-inline-block" href="https://privacy.abbvie/privacy-policies.html" target="_blank">
+            <h3 class="fw-bold">سياسة الخصوصية</h3>
+          </a>
         </div>
-        <div class="terms-of-use pb-5">
-          <h3 class="fw-bold">شروط الاستخدام</h3>
-          <a class="btn bg-dark text-white px-4" href="https://www.abbvie.com/terms-of-use.html" target="_blank">انقر هنا</a>
+        <div class="privacy-policy pb-5">
+          <a class="text-underline text-dark d-inline-block" href="https://www.abbvie.com/terms-of-use.html" target="_blank">
+            <h3 class="fw-bold">شروط الاستخدام</h3>
+          </a>
         </div>
         <div class="disclosures">
           <h3 class="fw-bold">الإفصاحات</h3>
@@ -176,7 +178,7 @@
 
       <div class="col-md-4 pb-5 pb-md-0">
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">البنود و الظروف</a></li>
+          <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
         </ul>
       </div>
 
@@ -197,7 +199,7 @@
   <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
 </ul>
         </div>
-        <p class="text-white fs-7">© 2023 <a class="text-white text-underline" href="https://www.allerganaesthetics.com/" target="_blank">Allergan Aesthetics</a>. جميع الحقوق محفوظة. جميع العلامات التجارية هي ملك لأصحابها.</p>
+        <p class="text-white fs-7 font-en text-start">© 2023 <a class="text-white text-underline" href="https://www.allerganaesthetics.com/" target="_blank">Allergan Aesthetics</a>. All rights reserved. All trademarks are the property of their respective owners.</p>
       </div>
 
     </div>
