--- a/en/causes.html
+++ b/en/causes.html
@@ -2,7 +2,7 @@
 <html lang="en">  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="http://192.168.1.57/project/github/bts/">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -135,7 +135,7 @@
                   <span class="rounded-circle causes-rounded-block-icon-circle text-white fw-bold fs-6">
                     <img class="h-25" src="assets/img/icon/causes/icon-1.svg" alt="Icon">
                   </span>
-                  <span>Medicine or food supplement that can cause excessive sweating.</span>
+                  <span>Medicine or food<br class="d-none d-lg-block">supplement that<br class="d-none d-lg-block">can cause excessive<br class="d-none d-lg-block">sweating.</span>
                 </div>
                 <div class="causes-rounded-block-body fs-8 ">
                   Certain medications – including some antidepressants, propranolol, pilocarpine, and bethanechol, can cause excessive sweating.<sup>1,2</sup>
@@ -146,7 +146,7 @@
                   <span class="rounded-circle causes-rounded-block-icon-circle text-white fw-bold fs-6">
                     <img class="h-25" src="assets/img/icon/causes/icon-2.svg" alt="Icon">
                   </span>
-                  <span>Medical condition that causes the sweating.</span>
+                  <span>Medical<br class="d-none d-lg-block">condition that<br class="d-none d-lg-block">causes the<br class="d-none d-lg-block">sweating.</span>
                 </div>
                 <div class="causes-rounded-block-body fs-8 block-light">
                   Many medical conditions can cause excessive sweating. These include diabetes and gout.<br>A tumour or injury also can cause excessive sweating.<br>Women often sweat excessively when they get hot flashes during menopause. The cause is obvious. Some women, however, develop excessive sweating after they have gone through menopause. This sweating does not have an obvious cause.<sup>1,2</sup>
@@ -157,7 +157,7 @@
                   <span class="rounded-circle causes-rounded-block-icon-circle text-white fw-bold fs-6">
                     <img class="h-25" src="assets/img/icon/causes/icon-3.svg" alt="Icon">
                   </span>
-                  <span>Family member who sweats excessively.</span>
+                  <span>Family<br class="d-none d-lg-block">member who<br class="d-none d-lg-block">sweats<br class="d-none d-lg-block">excessively.</span>
                 </div>
                 <div class="causes-rounded-block-body fs-8 ">
                   When the excessive sweating occurs in one or two areas of the body, it is likely that a family member also has this condition.<sup>1,2</sup>
@@ -183,11 +183,25 @@
     <div class="col-xl-10">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-8 col-lg-6 col-md-8 py-4">
-          <h2 class="h1 fw-bold display-4 text-animate">REFERENCES:</h2>
-          <ol class="font-en">
-            <li><a class="text-dark" href="https://www.aad.org/public/diseases/a-z/hyperhidrosis-causes" target="_blank">https://www.aad.org/public/diseases/a-z/hyperhidrosis-causes</a> last accessed (May 2023)</li>
-            <li>Bellet J. “Hyperhidrosis and hypertrichosis in children and adolescents.” Focus session presented at the 2013 Annual Meeting of the American Academy of Dermatology: Miami. Mar 2013.</li>
-          </ol>
+
+          <div class="accordion accordion-flush">
+            <div class="accordion-item mb-1 border-0">
+              <div class="accordion-header">
+                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="false" aria-controls="flush-collapse0">
+                  REFERENCES:
+                </button>
+              </div>
+              <div id="flush-collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+                <div class="accordion-body">
+                  <ol class="font-en">
+                    <li><a class="text-dark" href="https://www.aad.org/public/diseases/a-z/hyperhidrosis-causes" target="_blank">https://www.aad.org/public/diseases/a-z/hyperhidrosis-causes</a> last accessed (May 2023)</li>
+                    <li>Bellet J. “Hyperhidrosis and hypertrichosis in children and adolescents.” Focus session presented at the 2013 Annual Meeting of the American Academy of Dermatology: Miami. Mar 2013.</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
         <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
           <div class="row d-flex justify-content-center align-items-center">
