--- a/en/complications.html
+++ b/en/complications.html
@@ -2,7 +2,7 @@
 <html lang="en">  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="http://192.168.1.57/project/github/bts/">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -143,25 +143,28 @@
 
           <div class="row d-flex justify-content-center align-items-start pt-3">
                           <div class="col-6 col-md-4 col-lg-6 col-xl-5 col-xxl-4 pb-3">
-                <div class="complications-square-block">
+                <div class="complications-square-block hide">
                   <div class="fw-bold bg-dark text-white csb-header fs-5 py-4 text-center">
-                    Fungal infections                  </div>
+                    <span class="position-relative">Fungal infections</span>
+                  </div>
                   <div class="csb-body fs-6">
                     Hyperhidrosis increases infections, particularly on the feet – most commonly fungal nail infections and athlete’s foot.<sup>3</sup>                  </div>
                 </div>
               </div>
                           <div class="col-6 col-md-4 col-lg-6 col-xl-5 col-xxl-4 pb-3">
-                <div class="complications-square-block">
-                  <div class="fw-bold bg-dark text-white csb-header fs-5 py-4 text-center">
-                    Skin conditions                  </div>
+                <div class="complications-square-block hide">
+                  <div class="fw-bold bg-dark-level-2 text-white csb-header fs-5 py-4 text-center">
+                    <span class="position-relative">Skin conditions</span>
+                  </div>
                   <div class="csb-body fs-6">
                     Excessive sweat can make you more vulnerable to certain skin conditions3, such as: <ul><li>Warts-small, rough lumps on the skin that are caused by the HPV virus.</li><li>Boils-swollen red- yellow bumps in the skin that can develop when a hair follicle becomes infected.</li><li>Eczema can also be made worse by excessive sweating.</li></ul>                  </div>
                 </div>
               </div>
                           <div class="col-6 col-md-4 col-lg-6 col-xl-5 col-xxl-4 pb-3">
-                <div class="complications-square-block">
-                  <div class="fw-bold bg-dark text-white csb-header fs-5 py-4 text-center">
-                    Body odour                  </div>
+                <div class="complications-square-block hide">
+                  <div class="fw-bold bg-dark-level-3 text-white csb-header fs-5 py-4 text-center">
+                    <span class="position-relative">Body odour</span>
+                  </div>
                   <div class="csb-body fs-6">
                     Although people with hyperhidrosis sweat a lot, most don't have problems with body odour.<br>This is because hyperhidrosis doesn't usually affect the sweat glands responsible for producing unpleasant-smelling sweat-called the aprocrine sweat glands.<br>However, if bacteria are allowed to break down the sweat, it can start to smell unpleasant.<sup>3</sup>                  </div>
                 </div>
@@ -187,12 +190,27 @@
     <div class="col-xl-10">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-8 col-lg-6 col-md-8 py-4">
-          <h2 class="h1 fw-bold display-4 text-animate">REFERENCES:</h2>
-          <ol class="font-en">
-            <li>Recognition, diagnosis, and treatment of primary focal hyperhidrosis John Hornberger J Am Acad Dermatol 2004.</li>
-            <li>Focal hyperhidrosis: diagnosis and management, Aamir Haider CMAJ 2005;172(1):69-80.</li>
-            <li><a class="text-dark" target="_blank" href="https://www.nhsinform.scot/illnesses-and-conditions/skin-hair-and-nails/hyperhidrosis#complications-of-hyperhidrosis">https://www.nhsinform.scot/illnesses-and-conditions/skin-hair-and-nails/hyperhidrosis#complications-of-hyperhidrosis</a> last accessed (Feb 2023).</li>
-          </ol>
+
+
+          <div class="accordion accordion-flush">
+            <div class="accordion-item mb-1 border-0">
+              <div class="accordion-header">
+                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="false" aria-controls="flush-collapse0">
+                  REFERENCES:
+                </button>
+              </div>
+              <div id="flush-collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+                <div class="accordion-body">
+                  <ol class="font-en">
+                    <li>Recognition, diagnosis, and treatment of primary focal hyperhidrosis John Hornberger J Am Acad Dermatol 2004.</li>
+                    <li>Focal hyperhidrosis: diagnosis and management, Aamir Haider CMAJ 2005;172(1):69-80.</li>
+                    <li><a class="text-dark" target="_blank" href="https://www.nhsinform.scot/illnesses-and-conditions/skin-hair-and-nails/hyperhidrosis#complications-of-hyperhidrosis">https://www.nhsinform.scot/illnesses-and-conditions/skin-hair-and-nails/hyperhidrosis#complications-of-hyperhidrosis</a> last accessed (Feb 2023).</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
         <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
           <div class="row d-flex justify-content-center align-items-center">
