--- a/en/diagnosis.html
+++ b/en/diagnosis.html
@@ -2,7 +2,7 @@
 <html lang="en">  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="http://192.168.1.57/project/github/bts/">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -126,7 +126,7 @@
           <h2 class="h1 fw-bold display-4 text-animate pb-2">DIAGNOSIS</h2>
 
 
-            <p class="fs-4 mb-2 fw-bold">Symptoms</p>
+            <p class="fs-4 fw-bold mb-0">Symptoms</p>
             <p>Severe primary axillary hyperhidrosis (underarm sweating)  is usually diagnosed when a person has experienced at least 6 months of excessive underarm sweating (with no known cause) and also has at least two other characteristics listed below:<sup>1</sup></p>
             <ul class="custom-icon-list list-icon-1">
               <li>Both underarms are affected.</li>
@@ -136,21 +136,21 @@
               <li>Family history of excessive sweating.</li>
               <li>Excessive sweating does not happen during sleep.</li>
             </ul>
-            <p class="fs-4 mb-2 fw-bold">Tests</p>
+            <p class="fs-4 fw-bold mb-0">Tests</p>
             <p>You may need one or more tests to help pinpoint what’s causing your body to sweat too much. Blood or urine tests may confirm or rule out an underlying medical condition. Your doctor also may recommend a test to measure how much sweat your body produces.</p>
 
             <div class="d-flex justify-content-start">
               <div class="pe-2">
                 <img width="50" src="assets/img/icon/diagnosis/starch-icon.svg" alt="starch icon">
               </div>
-              <p class="fs-5 mb-2 fw-bold">STARCH-IODINE TEST:</p>
+              <p class="fs-5 fw-bold mb-0">STARCH-IODINE TEST:</p>
             </div>
             <p>Your doctor applies an iodine solution to the sweaty area and sprinkles starch over the iodine solution. Where you have excess sweating, the solution turns dark blue.</p>
             <div class="d-flex justify-content-start">
               <div class="pe-2">
                 <img width="50" src="assets/img/icon/diagnosis/paper-icon.svg" alt="paper icon">
               </div>
-              <p class="fs-5 mb-2 fw-bold">PAPER TEST:</p>
+              <p class="fs-5 fw-bold mb-0">PAPER TEST:</p>
             </div>
             <p>Your doctor places special paper on the affected area to absorb sweat. Later, your provider weighs the paper to determine how much you have sweated.<sup>2</sup></p>
 
@@ -174,11 +174,25 @@
     <div class="col-xl-10">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-8 col-lg-6 col-md-8 py-4">
-          <h2 class="h1 fw-bold display-4 text-animate">REFERENCES:</h2>
-          <ol class="font-en">
-            <li>Hornberger J et al. J Am Acad Dermatol 2004;51:274−286.</li>
-            <li><a class="text-dark" href="https://my.clevelandclinic.org/health/diseases/17113-hyperhidrosis#diagnosis-and-tests" target="_blank">https://my.clevelandclinic.org/health/diseases/17113-hyperhidrosis#diagnosis-and-tests</a> last accessed (Feb 2023).</li>
-          </ol>
+
+          <div class="accordion accordion-flush">
+            <div class="accordion-item mb-1 border-0">
+              <div class="accordion-header">
+                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="false" aria-controls="flush-collapse0">
+                  REFERENCES:
+                </button>
+              </div>
+              <div id="flush-collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+                <div class="accordion-body">
+                  <ol class="font-en">
+                    <li>Hornberger J et al. J Am Acad Dermatol 2004;51:274−286.</li>
+                    <li><a class="text-dark" href="https://my.clevelandclinic.org/health/diseases/17113-hyperhidrosis#diagnosis-and-tests" target="_blank">https://my.clevelandclinic.org/health/diseases/17113-hyperhidrosis#diagnosis-and-tests</a> last accessed (Feb 2023).</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
         <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
           <div class="row d-flex justify-content-center align-items-center">
