--- a/en/download-brochure.html
+++ b/en/download-brochure.html
@@ -2,7 +2,7 @@
 <html lang="en">  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="http://192.168.1.57/project/github/bts/">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -120,6 +120,9 @@
     <div class="container-fluid container-xl">
   <div class="row d-flex align-items-center">
     <div class="col-xl-8 pb-4 pb-xl-0 text-center">
+      <p class="pb-2">Thank you for visiting Beat The Sweat Facebook page. A Disease Awareness page aims to raise awareness about Axillary Hyperhidrosis and
+support patients living with it.<br>Powered by Allergan Aesthetics, an AbbVie company.
+</p>
       <div class="video-block position-relative">
         <video preload="metadata" class="w-100" id="teaser_video" playsinline autoplay muted loop>
       		<source src="https://storage.googleapis.com/vinith/assets/m/v/bts/bts.mp4" type="video/mp4">
