--- a/en/index.html
+++ b/en/index.html
@@ -2,7 +2,7 @@
 <html lang="en">  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="http://192.168.1.57/project/github/bts/">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -160,7 +160,7 @@
           <img src="assets/img/banners/home-sliders/slide-1.jpg" alt="BTS slide">
         </div>
                 <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-2.jpg" alt="BTS slide">
+          <img src="assets/img/banners/home-sliders/slide-2-1.jpg" alt="BTS slide">
         </div>
                 <div class="swiper-slide">
           <img src="assets/img/banners/home-sliders/slide-3.jpg" alt="BTS slide">
@@ -175,7 +175,7 @@
           <img src="assets/img/banners/home-sliders/slide-1.jpg" alt="BTS slide">
         </div>
                 <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-2.jpg" alt="BTS slide">
+          <img src="assets/img/banners/home-sliders/slide-2-1.jpg" alt="BTS slide">
         </div>
                 <div class="swiper-slide">
           <img src="assets/img/banners/home-sliders/slide-3.jpg" alt="BTS slide">
@@ -281,11 +281,26 @@
     <div class="col-xl-11">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-8 col-lg-6 col-md-8 py-4">
-          <h2 class="h1 fw-bold display-4 text-animate">REFERENCES:</h2>
-          <ol class="font-en">
-            <li>Doolittle J et al. Arch Dermatol Res 2016;308:743−749.</li>
-            <li><a class="text-dark" href="https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms" target="_blank">https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms</a> LAST ACCESSED (Apr-23) from Bellet J. “Hyperhidrosis and hypertrichosis in children and adolescents.” Focus session presented at the 2013 Annual Meeting of the American Academy of Dermatology: Miami. Mar 2013.</li>
-          </ol>
+
+          <div class="accordion accordion-flush">
+            <div class="accordion-item mb-1 border-0">
+              <div class="accordion-header">
+                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="false" aria-controls="flush-collapse0">
+                  REFERENCES:
+                </button>
+              </div>
+              <div id="flush-collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+                <div class="accordion-body">
+                  <ol class="font-en">
+                    <li>Doolittle J et al. Arch Dermatol Res 2016;308:743−749.</li>
+                    <li><a class="text-dark" href="https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms" target="_blank">https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms</a> LAST ACCESSED (Apr-23) from Bellet J. “Hyperhidrosis and hypertrichosis in children and adolescents.” Focus session presented at the 2013 Annual Meeting of the American Academy of Dermatology: Miami. Mar 2013.</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
         </div>
         <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
           <div class="row d-flex justify-content-center align-items-center">
