--- a/en/surgical-other-procedures.html
+++ b/en/surgical-other-procedures.html
@@ -2,7 +2,7 @@
 <html lang="en">  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="http://192.168.1.57/project/github/bts/">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -138,50 +138,45 @@
 
         <div class="col-lg-4">
           <div class="row d-flex justify-content-center align-items-center pt-3">
-            <div class="col-10 text-center">
+            <div class="col-md-10 text-center">
               <img width="200" src="assets/img/icon/surgical/surgical-1.svg" alt="surgical icon">
+              <p class="fs-4 mb-2 fw-bold text-center">SWEAT GLAND REMOVAL</p>
+              <p>If you sweat heavily only in your armpits, your health care provider may suggest removing those sweat glands. This may be done through scraping them away (curettage), Absorbing them out (liposuction) or using a combination of the two (suction curettage).<sup>1</sup></p>
             </div>
           </div>
-
-                      <p class="fs-4 mb-2 fw-bold text-center">SWEAT GLAND REMOVAL</p>
-            <p>If you sweat heavily only in your armpits, your health care provider may suggest removing those sweat glands. This may be done through scraping them away (curettage), Absorbing them out (liposuction) or using a combination of the two (suction curettage).<sup>1</sup></p>
 
         </div>
 
         <div class="col-lg-4 pt-4 pt-lg-0">
           <div class="row d-flex justify-content-center align-items-center pt-3">
-            <div class="col-10 text-center">
+            <div class="col-md-10 text-center">
               <img width="200" src="assets/img/icon/surgical/surgical-2.svg" alt="surgical icon">
+              <p class="fs-4 mb-2 fw-bold text-center">NERVE SURGERY</p>
+              <p>Nerve surgery is a procedure where a small section of the spinal nerves controlling sweating in your hands is removed by a surgeon. Although it can help reduce excessive sweating in your hands, one possible side effect is that you may experience heavy sweating in other areas of your body permanently, which is called compensatory sweating.</p>
+              <p>There is a variation of this procedure that treats excessive sweating in the palms, which interrupts the nerve signals without removing the sympathetic nerve.</p>
+              <p>Nerve surgery is generally only considered for people who have tried other treatments without success because there is a risk of side effects and complications.</p>
+              <p>It is essential to consult with your doctor to determine if this procedure is the best option for you.<sup>1</sup></p>
             </div>
           </div>
-
-
-            <p class="fs-4 mb-2 fw-bold text-center">NERVE SURGERY</p>
-            <p>Nerve surgery is a procedure where a small section of the spinal nerves controlling sweating in your hands is removed by a surgeon. Although it can help reduce excessive sweating in your hands, one possible side effect is that you may experience heavy sweating in other areas of your body permanently, which is called compensatory sweating.</p>
-            <p>There is a variation of this procedure that treats excessive sweating in the palms, which interrupts the nerve signals without removing the sympathetic nerve.</p>
-            <p>Nerve surgery is generally only considered for people who have tried other treatments without success because there is a risk of side effects and complications.</p>
-            <p>It is essential to consult with your doctor to determine if this procedure is the best option for you.<sup>1</sup></p>
 
                   </div>
 
         <div class="col-lg-4 pt-4 pt-lg-0">
           <div class="row d-flex justify-content-center align-items-center pt-3">
-            <div class="col-10 text-center">
+            <div class="col-md-10 text-center">
               <img width="200" src="assets/img/icon/surgical/surgical-3.svg" alt="surgical icon">
+              <p class="fs-4 mb-2 fw-bold text-center">MICROWAVE THERAPY</p>
+              <p>With this therapy, a handheld device delivers microwave energy to destroy sweat glands in the armpits.</p>
+              <p>Treatments involve two 20 to 30 minutes sessions, three months apart. Possible side effects are a change in skin sensation and some discomfort.</p>
+              <p>Long-term side effects are unknown.<sup>1</sup></p>
             </div>
           </div>
-
-
-            <p class="fs-4 mb-2 fw-bold text-center">MICROWAVE THERAPY</p>
-            <p>With this therapy, a handheld device delivers microwave energy to destroy sweat glands in the armpits.</p>
-            <p>Treatments involve two 20 to 30 minutes sessions, three months apart. Possible side effects are a change in skin sensation and some discomfort.</p>
-            <p>Long-term side effects are unknown.<sup>1</sup></p>
 
 
         </div>
 
         <div class="col-12 col-lg-10 pt-3">
-                      <p class="bg-secondary px-2 py-2 text-white">All treatment options are to be discussed and recommend by your doctor based on many factors. This is just for educational purpose; your doctor will be the best judge to provide you the most appropriate treatment for your condition.</p>
+                      <p class="bg-secondary px-2 py-2 text-white">All treatment options are to be discussed and recommend by your doctor based on many factors.<br>This is just for educational purpose; your doctor will be the best judge to provide you the most appropriate treatment for your condition.</p>
                   </div>
       </div>
     </div>
@@ -195,10 +190,24 @@
     <div class="col-xl-10">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-8 col-lg-6 col-md-8 py-4">
-          <h2 class="h1 fw-bold display-4 text-animate">REFERENCES:</h2>
-          <ol class="font-en">
-            <li><a class="text-dark" href="https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173" target="_blank">https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173</a> last accessed (May 2023).</li>
-          </ol>
+
+          <div class="accordion accordion-flush">
+            <div class="accordion-item mb-1 border-0">
+              <div class="accordion-header">
+                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="false" aria-controls="flush-collapse0">
+                  REFERENCES:
+                </button>
+              </div>
+              <div id="flush-collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+                <div class="accordion-body">
+                  <ol class="font-en">
+                    <li><a class="text-dark" href="https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173" target="_blank">https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173</a> last accessed (May 2023).</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
         <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
           <div class="row d-flex justify-content-center align-items-center">
