--- a/en/terms-and-conditions.html
+++ b/en/terms-and-conditions.html
@@ -2,7 +2,7 @@
 <html lang="en">  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="http://192.168.1.57/project/github/bts/">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -129,12 +129,14 @@
     <div class="col-lg-8">
       <div class="ps-3">
         <div class="privacy-policy pb-5">
-          <h3 class="fw-bold">PRIVACY POLICY</h3>
-          <a class="btn bg-dark text-white px-4" href="https://privacy.abbvie/privacy-policies.html" target="_blank">Click here</a>
+          <a class="text-underline text-dark d-inline-block" href="https://privacy.abbvie/privacy-policies.html" target="_blank">
+            <h3 class="fw-bold">PRIVACY POLICY</h3>
+          </a>
         </div>
-        <div class="terms-of-use pb-5">
-          <h3 class="fw-bold">TERMS OF USE</h3>
-          <a class="btn bg-dark text-white px-4" href="https://www.abbvie.com/terms-of-use.html" target="_blank">Click here</a>
+        <div class="privacy-policy pb-5">
+          <a class="text-underline text-dark d-inline-block" href="https://www.abbvie.com/terms-of-use.html" target="_blank">
+            <h3 class="fw-bold">TERMS OF USE</h3>
+          </a>
         </div>
         <div class="disclosures">
           <h3 class="fw-bold">DISCLOSURES</h3>
