--- a/ar/complications.html
+++ b/ar/complications.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="http://192.168.1.57/project/github/bts/">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -143,25 +143,28 @@
 
           <div class="row d-flex justify-content-center align-items-start pt-3">
                           <div class="col-6 col-md-4 col-lg-6 col-xl-5 col-xxl-4 pb-3">
-                <div class="complications-square-block">
+                <div class="complications-square-block hide">
                   <div class="fw-bold bg-dark text-white csb-header fs-5 py-4 text-center">
-                    الالتهابات الفطرية                  </div>
+                    <span class="position-relative">الالتهابات الفطرية</span>
+                  </div>
                   <div class="csb-body fs-6">
                     يزيد التعرق من خطر الإصابة بعدوى فطرية، خاصة على القدمين - وهي الأكثر شيوعًا مثل التهابات الأظافر الفطرية وقدم الرياضي.<sup>3</sup>                  </div>
                 </div>
               </div>
                           <div class="col-6 col-md-4 col-lg-6 col-xl-5 col-xxl-4 pb-3">
-                <div class="complications-square-block">
-                  <div class="fw-bold bg-dark text-white csb-header fs-5 py-4 text-center">
-                    الأمراض الجلدية                  </div>
+                <div class="complications-square-block hide">
+                  <div class="fw-bold bg-dark-level-2 text-white csb-header fs-5 py-4 text-center">
+                    <span class="position-relative">الأمراض الجلدية</span>
+                  </div>
                   <div class="csb-body fs-6">
                     يمكن أن يجعلك العرق المفرط أكثر عرضة لبعض الأمراض الجلدية3، مثل: <ul><li>الثآليل – وهي عباره عن كتل صغيرة وخشنة على الجلد يسببها فيروس الورم الحليمي البشري.</li><li>الدمامل – وهي نتوءات منتفخة باللون الأحمر والأصفر في الجلد يمكن أن تتطور عندما تصاب بصيلات الشعر بالعدوى.</li><li>يمكن أن تتفاقم الأكزيما بسبب التعرق المفرط.</li></ul>                  </div>
                 </div>
               </div>
                           <div class="col-6 col-md-4 col-lg-6 col-xl-5 col-xxl-4 pb-3">
-                <div class="complications-square-block">
-                  <div class="fw-bold bg-dark text-white csb-header fs-5 py-4 text-center">
-                    رائحة الجسم                  </div>
+                <div class="complications-square-block hide">
+                  <div class="fw-bold bg-dark-level-3 text-white csb-header fs-5 py-4 text-center">
+                    <span class="position-relative">رائحة الجسم</span>
+                  </div>
                   <div class="csb-body fs-6">
                     على الرغم من أن الأشخاص المصابين بفرط التعرق يتعرقون كثيرًا، إلا أن معظمهم لا يعانون من مشاكل في رائحة الجسم. وذلك لأن فرط التعرق لا يؤثر عادة على الغدد العرقية المسؤولة عن إفراز رائحة كريهة للعرق - تسمى الغدد الصماء العرقية.<br>ومع ذلك، إذا سمح للبكتيريا بتفكيك العرق، يمكن أن ينتج عن ذلك رائحة كريهة.<sup>3</sup>                  </div>
                 </div>
@@ -187,12 +190,27 @@
     <div class="col-xl-10">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-8 col-lg-6 col-md-8 py-4">
-          <h2 class="h1 fw-bold display-4 text-animate">مراجع:</h2>
-          <ol class="font-en">
-            <li>Recognition, diagnosis, and treatment of primary focal hyperhidrosis John Hornberger J Am Acad Dermatol 2004.</li>
-            <li>Focal hyperhidrosis: diagnosis and management, Aamir Haider CMAJ 2005;172(1):69-80.</li>
-            <li><a class="text-dark" target="_blank" href="https://www.nhsinform.scot/illnesses-and-conditions/skin-hair-and-nails/hyperhidrosis#complications-of-hyperhidrosis">https://www.nhsinform.scot/illnesses-and-conditions/skin-hair-and-nails/hyperhidrosis#complications-of-hyperhidrosis</a> last accessed (Feb 2023).</li>
-          </ol>
+
+          <div class="accordion accordion-flush">
+            <div class="accordion-item mb-1 border-0">
+              <div class="accordion-header">
+                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="false" aria-controls="flush-collapse0">
+                  مراجع:
+                </button>
+              </div>
+              <div id="flush-collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+                <div class="accordion-body">
+                  <ol class="font-en">
+                    <li>Recognition, diagnosis, and treatment of primary focal hyperhidrosis John Hornberger J Am Acad Dermatol 2004.</li>
+                    <li>Focal hyperhidrosis: diagnosis and management, Aamir Haider CMAJ 2005;172(1):69-80.</li>
+                    <li><a class="text-dark" target="_blank" href="https://www.nhsinform.scot/illnesses-and-conditions/skin-hair-and-nails/hyperhidrosis#complications-of-hyperhidrosis">https://www.nhsinform.scot/illnesses-and-conditions/skin-hair-and-nails/hyperhidrosis#complications-of-hyperhidrosis</a> last accessed (Feb 2023).</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
         </div>
         <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
           <div class="row d-flex justify-content-center align-items-center">
@@ -223,7 +241,7 @@
 
       <div class="col-md-4 pb-5 pb-md-0">
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">البنود و الظروف</a></li>
+          <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
         </ul>
       </div>
 
@@ -244,7 +262,7 @@
   <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
 </ul>
         </div>
-        <p class="text-white fs-7">© 2023 <a class="text-white text-underline" href="https://www.allerganaesthetics.com/" target="_blank">Allergan Aesthetics</a>. جميع الحقوق محفوظة. جميع العلامات التجارية هي ملك لأصحابها.</p>
+        <p class="text-white fs-7 font-en text-start">© 2023 <a class="text-white text-underline" href="https://www.allerganaesthetics.com/" target="_blank">Allergan Aesthetics</a>. All rights reserved. All trademarks are the property of their respective owners.</p>
       </div>
 
     </div>
