--- a/ar/download-brochure.html
+++ b/ar/download-brochure.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="http://192.168.1.57/project/github/bts/">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -120,6 +120,7 @@
     <div class="container-fluid container-xl">
   <div class="row d-flex align-items-center">
     <div class="col-xl-8 pb-4 pb-xl-0 text-center">
+      <p class="pb-2">تغلب على العرق" هي حملة توعية تهدف إلى زيادة الوعي حول مرض فرط التعرّق الإبطي ودعم المرضى الذين يعانون منه.<br>برعاية Allergan Aesthetics إحدى شركات AbbVie</p>
       <div class="video-block position-relative">
         <video preload="metadata" class="w-100" id="teaser_video" playsinline autoplay muted loop>
       		<source src="https://storage.googleapis.com/vinith/assets/m/v/bts/bts.mp4" type="video/mp4">
@@ -165,7 +166,7 @@
 
       <div class="col-md-4 pb-5 pb-md-0">
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">البنود و الظروف</a></li>
+          <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
         </ul>
       </div>
 
@@ -186,7 +187,7 @@
   <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
 </ul>
         </div>
-        <p class="text-white fs-7">© 2023 <a class="text-white text-underline" href="https://www.allerganaesthetics.com/" target="_blank">Allergan Aesthetics</a>. جميع الحقوق محفوظة. جميع العلامات التجارية هي ملك لأصحابها.</p>
+        <p class="text-white fs-7 font-en text-start">© 2023 <a class="text-white text-underline" href="https://www.allerganaesthetics.com/" target="_blank">Allergan Aesthetics</a>. All rights reserved. All trademarks are the property of their respective owners.</p>
       </div>
 
     </div>
