--- a/ar/index.html
+++ b/ar/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="http://192.168.1.57/project/github/bts/">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -160,7 +160,7 @@
           <img src="assets/img/banners/home-sliders/slide-1.jpg" alt="BTS slide">
         </div>
                 <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-2.jpg" alt="BTS slide">
+          <img src="assets/img/banners/home-sliders/slide-2-1.jpg" alt="BTS slide">
         </div>
                 <div class="swiper-slide">
           <img src="assets/img/banners/home-sliders/slide-3.jpg" alt="BTS slide">
@@ -175,7 +175,7 @@
           <img src="assets/img/banners/home-sliders/slide-1.jpg" alt="BTS slide">
         </div>
                 <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-2.jpg" alt="BTS slide">
+          <img src="assets/img/banners/home-sliders/slide-2-1.jpg" alt="BTS slide">
         </div>
                 <div class="swiper-slide">
           <img src="assets/img/banners/home-sliders/slide-3.jpg" alt="BTS slide">
@@ -205,7 +205,7 @@
           <div class="percentage-block">
             <img class="w-100" src="assets/img/logo/bts-square.svg" alt="Logo Square">
             <div class="percentage-value font-en h1">
-              <span class="text-animate">65%</span>
+              <span class="text-animate">٦٥٪</span>
             </div>
           </div>
 
@@ -220,7 +220,7 @@
           <div class="percentage-block">
             <img class="w-100" src="assets/img/logo/bts-square.svg" alt="Logo Square">
             <div class="percentage-value font-en h1">
-              <span class="text-animate">3%</span>
+              <span class="text-animate">٣٪</span>
             </div>
           </div>
                       <p class="h3 pt-3 text-start">ما یقرب من ۳٪ من الناس فى جمیع أنحاء العالم - ٣٦٥ - ملیون شخص یعانون من فرط التعرّق.<sup>1,2</sup></p>
@@ -231,7 +231,7 @@
       <div>
         <div class="row d-flex justify-content-center py-md-5">
           <div class="col-10">
-                          <p class="h2 pb-3">Affecting both <br><strong>MEN & WOMEN</strong><br>equally.<sup>1</sup></p>
+                          <p class="h2 pb-3">تصيب الرجال و النساء بالتساوي<sup>1</sup></p>
                       </div>
         </div>
       </div>
@@ -247,7 +247,7 @@
         <div class="col-8">
           <a href="ar/causes" class="d-block oval-block text-center text-decoration-none">
             <img class="w-100" src="assets/img/banners/oval-model-1.png" alt="Model 1">
-            <span class="h2 fw-bold text-dark pt-3 d-block">الأسباب</span>
+            <span class="h2 fw-bold text-dark pt-3 d-block">أسباب فرط التعرق</span>
           </a>
         </div>
       </div>
@@ -281,11 +281,27 @@
     <div class="col-xl-11">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-8 col-lg-6 col-md-8 py-4">
-          <h2 class="h1 fw-bold display-4 text-animate">مراجع:</h2>
-          <ol class="font-en">
-            <li>Doolittle J et al. Arch Dermatol Res 2016;308:743−749.</li>
-            <li><a class="text-dark" href="https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms" target="_blank">https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms</a> LAST ACCESSED (Apr-23) from Bellet J. “Hyperhidrosis and hypertrichosis in children and adolescents.” Focus session presented at the 2013 Annual Meeting of the American Academy of Dermatology: Miami. Mar 2013.</li>
-          </ol>
+
+
+          <div class="accordion accordion-flush">
+            <div class="accordion-item mb-1 border-0">
+              <div class="accordion-header">
+                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="false" aria-controls="flush-collapse0">
+                  مراجع:
+                </button>
+              </div>
+              <div id="flush-collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+                <div class="accordion-body">
+                  <ol class="font-en">
+                    <li>Doolittle J et al. Arch Dermatol Res 2016;308:743−749.</li>
+                    <li><a class="text-dark" href="https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms" target="_blank">https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms</a> LAST ACCESSED (Apr-23) from Bellet J. “Hyperhidrosis and hypertrichosis in children and adolescents.” Focus session presented at the 2013 Annual Meeting of the American Academy of Dermatology: Miami. Mar 2013.</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
         </div>
         <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
           <div class="row d-flex justify-content-center align-items-center">
@@ -316,7 +332,7 @@
 
       <div class="col-md-4 pb-5 pb-md-0">
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">البنود و الظروف</a></li>
+          <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
         </ul>
       </div>
 
@@ -337,7 +353,7 @@
   <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
 </ul>
         </div>
-        <p class="text-white fs-7">© 2023 <a class="text-white text-underline" href="https://www.allerganaesthetics.com/" target="_blank">Allergan Aesthetics</a>. جميع الحقوق محفوظة. جميع العلامات التجارية هي ملك لأصحابها.</p>
+        <p class="text-white fs-7 font-en text-start">© 2023 <a class="text-white text-underline" href="https://www.allerganaesthetics.com/" target="_blank">Allergan Aesthetics</a>. All rights reserved. All trademarks are the property of their respective owners.</p>
       </div>
 
     </div>
