--- a/ar/lifestyle-tips.html
+++ b/ar/lifestyle-tips.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="http://192.168.1.57/project/github/bts/">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -147,12 +147,12 @@
                 <span class="fw-bold">1</span>
               </div>
               <div class="text-center">
-                <img height="120" src="assets/img/icon/lifestyle/do.svg" alt="lifestyle dos">
+                <img height="160" src="assets/img/icon/lifestyle/do.svg" alt="lifestyle dos">
               </div>
             </div>
             <div class="col-8">
 
-                              <ul class="custom-icon-list list-icon-2">
+                              <ul class="custom-icon-list list-icon-2 pt-lg-3">
                   <li>ارتد ملابس فضفاضة لتقليل علامات التعرق.</li>
                   <li>ارتدِ جوارب تمتص الرطوبة وقم بتغيير جواربك على الأقل مرتين في اليوم إن أمكن.</li>
                   <li>ارتد أحذية جلدية وحاول ارتداء أحذية مختلفة يومًا بعد يوم.</li>
@@ -169,15 +169,15 @@
                 <span class="fw-bold">1</span>
               </div>
               <div class="text-center">
-                <img height="120" src="assets/img/icon/lifestyle/dont.svg" alt="lifestyle donts">
+                <img height="160" src="assets/img/icon/lifestyle/dont.svg" alt="lifestyle donts">
               </div>
             </div>
             <div class="col-8">
 
-                              <ul class="custom-icon-list list-icon-2">
-                  <li>´ لا ترتدي ملابس ضيقة أو أقمشة اصطناعية - على سبيل المثال، النايلون.</li>
-                  <li>´ لا ترتدي أحذية مغلقة أو أحذية رياضية قد تسبب تعرق قدميك أكثر.</li>
-                  <li>´ لا تفعل أشياء قد تزيد من سوء التعرق - على سبيل المثال، شرب الكحول أو تناول الأطعمة الغنية بالتوابل.</li>
+                              <ul class="custom-icon-list list-icon-2 pt-lg-3">
+                  <li>لا ترتدي ملابس ضيقة أو أقمشة اصطناعية - على سبيل المثال، النايلون.</li>
+                  <li>لا ترتدي أحذية مغلقة أو أحذية رياضية قد تسبب تعرق قدميك أكثر.</li>
+                  <li>لا تفعل أشياء قد تزيد من سوء التعرق - على سبيل المثال، شرب الكحول أو تناول الأطعمة الغنية بالتوابل.</li>
                 </ul>
 
             </div>
@@ -208,13 +208,13 @@
       <div class="row">
         <div class="col-lg-12 pb-5">
 
-                      <p class="fs-4 mb-2 fw-bold">Iontophoresis.<sup>2</sup></p>
+                      <p class="fs-4 mb-2 fw-bold">تقنية الإحلال الأيوني<sup>2</sup></p>
             <p>باستخدام هذا العلاج المنزلي، يمكنك نقع يديك أو قدميك في وعاء من الماء بينما يمرر الجهاز تيارًا كهربائيًا خفيفًا عبر الماء. التيار يسد الأعصاب التي تسبب التعرق. يمكنك شراء الجهاز إذا كان لديك وصفة طبية من الطبيب الخاص بك.</p>
             <p>ستحتاج إلى نقع المناطق المصابة لمدة ٢٠ إلى ٤٠ دقيقة استخدم الجهاز حسب نصيحة طبيبك المعالج.<sup>1</sup></p>
 
           <div class="row d-flex justify-content-center align-items-center py-3 py-md-4">
             <div class="col-xxl-6 col-xl-8 col-lg-8 col-md-9 col-sm-10">
-              <img width="w-100" src="assets/img/banners/home-remedies-animate.svg" alt="home remedies">
+              <img width="w-100" src="assets/img/banners/home-remedies-animate-v1.svg" alt="home remedies">
             </div>
           </div>
         </div>
@@ -229,11 +229,25 @@
     <div class="col-xl-10">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-8 col-lg-6 col-md-8 py-4">
-          <h2 class="h1 fw-bold display-4 text-animate">مراجع:</h2>
-          <ol class="font-en">
-            <li><a class="text-dark" href="https://www.nhs.uk/conditions/excessive-sweating-hyperhidrosis/" target="_blank">https://www.nhs.uk/conditions/excessive-sweating-hyperhidrosis/</a> last accessed May 23.</li>
-            <li><a class="text-dark" href="https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173" target="_blank">https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173</a> last accessed May 23.</li>
-          </ol>
+
+          <div class="accordion accordion-flush">
+            <div class="accordion-item mb-1 border-0">
+              <div class="accordion-header">
+                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="false" aria-controls="flush-collapse0">
+                  مراجع:
+                </button>
+              </div>
+              <div id="flush-collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+                <div class="accordion-body">
+                  <ol class="font-en">
+                    <li><a class="text-dark" href="https://www.nhs.uk/conditions/excessive-sweating-hyperhidrosis/" target="_blank">https://www.nhs.uk/conditions/excessive-sweating-hyperhidrosis/</a> last accessed May 23.</li>
+                    <li><a class="text-dark" href="https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173" target="_blank">https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173</a> last accessed May 23.</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
         <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
           <div class="row d-flex justify-content-center align-items-center">
@@ -264,7 +278,7 @@
 
       <div class="col-md-4 pb-5 pb-md-0">
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">البنود و الظروف</a></li>
+          <li class="nav-item mb-2"><a href="ar/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">الشروط والأحكام</a></li>
         </ul>
       </div>
 
@@ -285,7 +299,7 @@
   <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
 </ul>
         </div>
-        <p class="text-white fs-7">© 2023 <a class="text-white text-underline" href="https://www.allerganaesthetics.com/" target="_blank">Allergan Aesthetics</a>. جميع الحقوق محفوظة. جميع العلامات التجارية هي ملك لأصحابها.</p>
+        <p class="text-white fs-7 font-en text-start">© 2023 <a class="text-white text-underline" href="https://www.allerganaesthetics.com/" target="_blank">Allergan Aesthetics</a>. All rights reserved. All trademarks are the property of their respective owners.</p>
       </div>
 
     </div>
