--- a/en/faqs.html
+++ b/en/faqs.html
@@ -2,7 +2,7 @@
 <html lang="en">  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="http://192.168.1.57/project/github/bts/">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -131,7 +131,7 @@
     <div class="row d-flex align-items-center justify-content-center pt-3">
       <div class="col-12 col-md-10 col-xl-10 col-xxl-8">
 
-        <div class="accordion accordion-flush" id="accordionFlushFaqs" dir="ltr">
+        <div class="accordion accordion-dark accordion-flush" id="accordionFlushFaqs" dir="ltr">
 
                       <div class="accordion-item mb-1 border-0">
               <h2 class="accordion-header">
