--- a/en/lifestyle-tips.html
+++ b/en/lifestyle-tips.html
@@ -2,7 +2,7 @@
 <html lang="en">  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
+    <base href="http://192.168.1.57/project/github/bts/">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
@@ -147,12 +147,12 @@
                 <span class="fw-bold">1</span>
               </div>
               <div class="text-center">
-                <img height="120" src="assets/img/icon/lifestyle/do.svg" alt="lifestyle dos">
+                <img height="160" src="assets/img/icon/lifestyle/do.svg" alt="lifestyle dos">
               </div>
             </div>
             <div class="col-8">
 
-                              <ul class="custom-icon-list list-icon-2">
+                              <ul class="custom-icon-list list-icon-2 pt-lg-3">
                   <li>Wear loose-fitting clothes to minimise signs of sweating.</li>
                   <li>Wear socks that absorb moisture and change your socks at least twice a day if possible.</li>
                   <li>Wear leather shoes and try to wear different shoes day to day.</li>
@@ -169,12 +169,12 @@
                 <span class="fw-bold">1</span>
               </div>
               <div class="text-center">
-                <img height="120" src="assets/img/icon/lifestyle/dont.svg" alt="lifestyle donts">
+                <img height="160" src="assets/img/icon/lifestyle/dont.svg" alt="lifestyle donts">
               </div>
             </div>
             <div class="col-8">
 
-                              <ul class="custom-icon-list list-icon-2">
+                              <ul class="custom-icon-list list-icon-2 pt-lg-3">
                   <li>Do not wear tight clothes or synthetic fabrics – for example, nylon.</li>
                   <li>Do not wear enclosed boots or sports shoes that may cause your feet to sweat more.</li>
                   <li>Do not do things that might make your sweating worse – for example, drinking alcohol or eating spicy food.</li>
@@ -195,7 +195,7 @@
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-lg-12">
           <div class="d-flex">
-            <h1 class="d-inline-block h2 fw-bold display-5 text-animate">HOME REMEDIES.</h1>
+            <h1 class="d-inline-block h2 fw-bold display-5 text-animate">HOME REMEDIES</h1>
           </div>
         </div>
       </div>
@@ -214,7 +214,7 @@
 
           <div class="row d-flex justify-content-center align-items-center py-3 py-md-4">
             <div class="col-xxl-6 col-xl-8 col-lg-8 col-md-9 col-sm-10">
-              <img width="w-100" src="assets/img/banners/home-remedies-animate.svg" alt="home remedies">
+              <img width="w-100" src="assets/img/banners/home-remedies-animate-v1.svg" alt="home remedies">
             </div>
           </div>
         </div>
@@ -229,11 +229,25 @@
     <div class="col-xl-10">
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-xl-8 col-lg-6 col-md-8 py-4">
-          <h2 class="h1 fw-bold display-4 text-animate">REFERENCES:</h2>
-          <ol class="font-en">
-            <li><a class="text-dark" href="https://www.nhs.uk/conditions/excessive-sweating-hyperhidrosis/" target="_blank">https://www.nhs.uk/conditions/excessive-sweating-hyperhidrosis/</a> last accessed May 23.</li>
-            <li><a class="text-dark" href="https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173" target="_blank">https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173</a> last accessed May 23.</li>
-          </ol>
+
+          <div class="accordion accordion-flush">
+            <div class="accordion-item mb-1 border-0">
+              <div class="accordion-header">
+                <button class="border-0 p-0 bg-transparent shadow-none h1 fw-bold display-4 text-animate collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse0" aria-expanded="false" aria-controls="flush-collapse0">
+                  REFERENCES:
+                </button>
+              </div>
+              <div id="flush-collapse0" class="accordion-collapse collapse" data-bs-parent="#accordionFlushFaqs">
+                <div class="accordion-body">
+                  <ol class="font-en">
+                    <li><a class="text-dark" href="https://www.nhs.uk/conditions/excessive-sweating-hyperhidrosis/" target="_blank">https://www.nhs.uk/conditions/excessive-sweating-hyperhidrosis/</a> last accessed May 23.</li>
+                    <li><a class="text-dark" href="https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173" target="_blank">https://www.mayoclinic.org/diseases-conditions/hyperhidrosis/diagnosis-treatment/drc-20367173</a> last accessed May 23.</li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
         <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
           <div class="row d-flex justify-content-center align-items-center">
