--- a/index.html
+++ b/index.html
@@ -1,358 +1,3 @@
-<!doctype html>
-<html lang="en">  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="assets/img/favicon/site.webmanifest">
-    <meta name="author" content="BEAT THE SWEAT">
-
-    <meta name="apple-mobile-web-app-title" content="BEAT THE SWEAT">
-    <meta name="application-name" content="BEAT THE SWEAT">
-    <link rel="canonical" href="/"/>
-
-    <title>BEAT THE SWEAT - Don't Crop Treat</title>
-              <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="assets/css/custom.css?v=2.102"/>
-  </head>
-  <body>
-
-<header class="bg-secondary">
-
-</header>
-<nav id="mainNavbar" class="topbar py-3">
-  <div class="container-fluid container-xl position-relative">
-    <div class="row d-flex justify-content-center align-items-center">
-      <div class="col-3 col-lg-2">
-        <a class="navbar-brand" href="en">
-          <img src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
-        </a>
-      </div>
-      <div class="col-4 col-lg-8">
-        <div class="main-menu">
-          <ul class="nav flex-column flex-lg-row position-relative justify-content-start align-items-start align-items-lg-center py-2">
-            <li class="nav-item mb-2 mb-lg-0 position-relative">
-              <a class="nav-link js-scroll-trigger py-1" href="en/hyperhidrosis-facts">HYPERHIDROSIS FACTS</a>
-              <ul class="mega-menu">
-                <li><a class="nav-link border-bottom" href="en/hyperhidrosis-facts#about">What is hyperhidrosis?</a></li>
-                <li><a class="nav-link border-bottom" href="en/causes">Causes</a></li>
-                <li><a class="nav-link border-bottom" href="en/diagnosis">Diagnosis</a></li>
-                <li><a class="nav-link" href="en/complications">Complications</a></li>
-              </ul>
-            </li>
-            <li class="nav-item mb-2 mb-lg-0 position-relative">
-              <a class="nav-link js-scroll-trigger py-1" href="en/how-to-treat">HOW TO TREAT</a>
-              <ul class="mega-menu">
-                <li><a class="nav-link border-bottom" href="en/how-to-treat#treatment_options">Treatment options</a></li>
-                <li><a class="nav-link border-bottom" href="en/botulinum-toxin-injections">Botulinum toxin injections.</a></li>
-                <li><a class="nav-link border-bottom" href="en/surgical-other-procedures">Surgical & other procedures</a></li>
-                <li><a class="nav-link" href="en/lifestyle-tips">Lifestyle Tips</a></li>
-              </ul>
-            </li>
-            <li class="nav-item mb-2 mb-lg-0 position-relative">
-              <a class="nav-link js-scroll-trigger py-1 hover-line" href="en/faqs">FAQs</a>
-            </li>
-            <li class="nav-item mb-2 mb-lg-0 position-relative">
-              <a class="ms-2 ms-lg-0 js-scroll-trigger btn btn-outline-light fw-bold" href="en/download-brochure">Download The Brochure</a>
-            </li>
-          </ul>
-          <div class="d-flex flex-column d-lg-none col-12 pt-3">
-            <div class="ps-2">
-              <ul class="list-unstyled d-flex social-navbar mb-0">
-  <li class="mx-1"><a href="https://www.facebook.com/BTS.MEA" target="_blank"><img src="assets/img/social/fb.svg" alt="Facebook"></a></li>
-  <li class="mx-1"><a href="https://www.instagram.com/beatthesweat.mea/" target="_blank"><img src="assets/img/social/instagram.svg" alt="Instagram"></a></li>
-  <li class="mx-1"><a href="https://www.tiktok.com/@beatthesweat.mea" target="_blank"><img src="assets/img/social/tiktok.svg" alt="Tiktok"></a></li>
-  <li class="mx-1"><a href="https://www.youtube.com/@Beatthesweat-MEA" target="_blank"><img src="assets/img/social/youtube.svg" alt="Youtube"></a></li>
-  <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
-</ul>
-            </div>
-            <div class="language-switcher ps-3 pt-3">
-              <div class="d-flex align-items-center justify-content-start">
-                <div class="">
-                  <img src="assets/img/icon/web.svg" alt="Language Icon">
-                </div>
-                <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 text-secondary">EN</a>
-                <span class="d-inline-block lang-divider"></span>
-                <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 " href="ar">AR</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="d-none d-lg-flex align-items-end justify-content-end col-2">
-
-        <ul class="list-unstyled d-flex social-navbar mb-0">
-  <li class="mx-1"><a href="https://www.facebook.com/BTS.MEA" target="_blank"><img src="assets/img/social/fb.svg" alt="Facebook"></a></li>
-  <li class="mx-1"><a href="https://www.instagram.com/beatthesweat.mea/" target="_blank"><img src="assets/img/social/instagram.svg" alt="Instagram"></a></li>
-  <li class="mx-1"><a href="https://www.tiktok.com/@beatthesweat.mea" target="_blank"><img src="assets/img/social/tiktok.svg" alt="Tiktok"></a></li>
-  <li class="mx-1"><a href="https://www.youtube.com/@Beatthesweat-MEA" target="_blank"><img src="assets/img/social/youtube.svg" alt="Youtube"></a></li>
-  <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
-</ul>
-
-        <div class="language-switcher ps-3">
-          <div class="d-flex align-items-center justify-content-center">
-            <div class="">
-              <img src="assets/img/icon/web.svg" alt="Language Icon">
-            </div>
-            <a class="ms-1 h6 text-decoration-none fw-bold font-en fs-7 mb-0 text-secondary">EN</a>
-            <span class="d-inline-block lang-divider"></span>
-            <a class="h6 text-decoration-none fw-bold fs-7 font-en mb-0 " href="ar">AR</a>
-          </div>
-        </div>
-
-      </div>
-      <div class="col-4 d-lg-none">
-        <div class="menu-icon">
-
-        </div>
-      </div>
-    </div>
-  </div>
-  <span class="sidebar-overlay"></span>
-</nav>
-
-<main class="page-content home">
-
-  <section class="pt-0">
-    <div class="video-full-width-fixed">
-  <div class="video-block position-relative">
-    <video preload="metadata" class="w-100" id="teaser_video" playsinline autoplay muted loop>
-      <source src="assets/video/bts.mp4" type="video/mp4">
-    </video>
-
-    <div id="videoPlayPause" class="control-icons">
-    </div>
-
-    <div id="videoMute" class="control-icons mute">
-    </div>
-
-    <div id="videoExpand" class="control-icons">
-    </div>
-
-  </div>
-  <a class="arrow-down-animate js-scroll-trigger-same-page" href="#visual">
-    <img src="assets/img/icon/arrow-down-dark.svg" alt="icon">
-  </a>
-</div>
-  </section>
-  <section class="py-0 position-relative">
-    <div id="visual" class="add-full-vh bg-dark position-relative">
-
-  <div class="container-fluid">
-    <div class="row d-flex align-items-center justify-content-center">
-      <div class="col-10 col-md-8 col-xxl-6 text-center">
-        <img class="w-100" src="assets/img/logo/beat-the-sweat-text-visual.svg" alt="BEAT THE SWEAT" />
-        <div class="text-typing-block">
-          <p class="font-en text-white pt-2 h2 text-tagline text-typed text-center" data-text="Don't Crop, Treat."></p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="position-relative">
-    <div class="swiper-button-prev"></div>
-    <div class="swiper models-carousel">
-      <div class="swiper-wrapper">
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-1.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-2.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-3.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-4.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-5.jpg" alt="BTS slide">
-        </div>
-                        <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-1.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-2.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-3.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-4.jpg" alt="BTS slide">
-        </div>
-                <div class="swiper-slide">
-          <img src="assets/img/banners/home-sliders/slide-5.jpg" alt="BTS slide">
-        </div>
-              </div>
-    </div>
-    <div class="swiper-button-next"></div>
-    <div class="campaign-visual-floating-logo">
-      <img src="assets/img/logo/logo-bts.svg" alt="BEAT THE SWEAT">
-    </div>
-  </div>
-
-</div>
-  </section>
-  <section class="bg-white py-0 position-relative">
-    <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4 bg-light py-5">
-      <div class="row d-flex justify-content-center py-md-5">
-        <div class="col-10">
-          <div class="percentage-block">
-            <img class="w-100" src="assets/img/logo/bts-square.svg" alt="Logo Square">
-            <div class="percentage-value font-en h1">
-              <span class="text-animate">65%</span>
-            </div>
-          </div>
-
-                      <p class="h3 pt-3 text-start">the most commonly reported body area where hyperhidrosis occurs is the underarms.</p>
-
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-white py-5">
-      <div class="row d-flex justify-content-center py-md-5">
-        <div class="col-10">
-          <div class="percentage-block">
-            <img class="w-100" src="assets/img/logo/bts-square.svg" alt="Logo Square">
-            <div class="percentage-value font-en h1">
-              <span class="text-animate">3%</span>
-            </div>
-          </div>
-                      <p class="h3 pt-3 text-start">of the general population -about <strong>365 MILLION PEOPLE</strong> worldwide- experience excessive sweating (hyperhidrosis).<sup>1,2</sup></p>
-                  </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-dark text-light py-5 bg-gender">
-      <div>
-        <div class="row d-flex justify-content-center py-md-5">
-          <div class="col-10">
-                          <p class="h2 pb-3">Affecting both <br><strong>MEN & WOMEN</strong><br>equally.<sup>1</sup></p>
-                      </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-  </section>
-  <section class="bg-white py-0 position-relative">
-    <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4 bg-white py-3 py-md-5">
-      <div class="row d-flex justify-content-center">
-        <div class="col-8">
-          <a href="en/causes" class="d-block oval-block text-center text-decoration-none">
-            <img class="w-100" src="assets/img/banners/oval-model-1.png" alt="Model 1">
-            <span class="h2 fw-bold text-dark pt-3 d-block">CAUSES OF<br>HYPERHIDROSIS</span>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-light py-3 py-md-5">
-      <div class="row d-flex justify-content-center">
-        <div class="col-8">
-          <a href="en/how-to-treat#treatment_options" class="d-block oval-block text-center text-decoration-none">
-            <img class="w-100" src="assets/img/banners/oval-model-2.png" alt="Model 2">
-            <span class="h2 fw-bold text-dark pt-3 d-block">TREATMENT<br>OPTIONS</span>
-          </a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4 bg-white py-3 py-md-5">
-      <div class="row d-flex justify-content-center">
-        <div class="col-8">
-          <a href="en/lifestyle-tips" class="d-block oval-block text-center text-decoration-none">
-            <img class="w-100" src="assets/img/banners/oval-model-3.png" alt="Model 3">
-            <span class="h2 fw-bold text-dark pt-3 d-block">LIFE STYLE<br>TIPS</span>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-  </section>
-  <section class="bg-white py-0 position-relative reference-bg">
-    <div class="container-fluid">
-  <div class="row d-flex justify-content-center align-items-center">
-    <div class="col-xl-11">
-      <div class="row d-flex justify-content-center align-items-center">
-        <div class="col-xl-8 col-lg-6 col-md-8 py-4">
-          <h2 class="h1 fw-bold display-4 text-animate">REFERENCES:</h2>
-          <ol class="font-en">
-            <li>Doolittle J et al. Arch Dermatol Res 2016;308:743−749.</li>
-            <li><a class="text-dark" href="https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms" target="_blank">https://www.aad.org/public/diseases/a-z/hyperhidrosis-symptoms</a> LAST ACCESSED (Apr-23) from Bellet J. “Hyperhidrosis and hypertrichosis in children and adolescents.” Focus session presented at the 2013 Annual Meeting of the American Academy of Dermatology: Miami. Mar 2013.</li>
-          </ol>
-        </div>
-        <div class="col-xl-4 col-lg-6 col-md-4 reference-bg-logo-none">
-          <div class="row d-flex justify-content-center align-items-center">
-            <div class="col-6 col-md-8 col-lg-8 col-xl-6 py-md-5">
-              <div class="logo-block py-5 my-xl-5 opacity-lg-0">
-                <img class="w-100" src="assets/img/logo/logo-b.svg" alt="BEAT THE SWEAT">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-  </section>
-
-</main>
-
-<footer class="position-relative pt-5 pb-2">
-  <div class="container-fluid container-md position-relative">
-
-    <div class="row d-flex align-items-center justify-content-between">
-      <div class="col-md-4 pb-5 pb-md-0">
-        <a href="https://www.allerganaesthetics.com/" target="_blank">
-          <img class="tagline-logo" src="assets/img/logo/logo.svg" alt="BEAT THE SWEAT">
-        </a>
-      </div>
-
-      <div class="col-md-4 pb-5 pb-md-0">
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="en/terms-and-conditions" class="nav-link text-white d-inline-block hover-line">Terms & Conditions</a></li>
-        </ul>
-      </div>
-
-      <div class="col-md-4 text-md-end">
-        <a href="en">
-          <img class="tagline-logo" src="assets/img/logo/logo-bts.svg" alt="BEAT THE SWEAT">
-        </a>
-      </div>
-
-      <div class="col-12 pt-5">
-        <div class="d-flex align-items-center pb-2">
-          <span class="text-white">Follow Us:</span>
-          <ul class="list-unstyled d-flex social-navbar mb-0">
-  <li class="mx-1"><a href="https://www.facebook.com/BTS.MEA" target="_blank"><img src="assets/img/social/fb.svg" alt="Facebook"></a></li>
-  <li class="mx-1"><a href="https://www.instagram.com/beatthesweat.mea/" target="_blank"><img src="assets/img/social/instagram.svg" alt="Instagram"></a></li>
-  <li class="mx-1"><a href="https://www.tiktok.com/@beatthesweat.mea" target="_blank"><img src="assets/img/social/tiktok.svg" alt="Tiktok"></a></li>
-  <li class="mx-1"><a href="https://www.youtube.com/@Beatthesweat-MEA" target="_blank"><img src="assets/img/social/youtube.svg" alt="Youtube"></a></li>
-  <li class="mx-1"><a href="https://www.snapchat.com/add/beatthesweatmea" target="_blank"><img src="assets/img/social/snapchat.svg" alt="Snapchat"></a></li>
-</ul>
-        </div>
-        <p class="text-white fs-7">© 2023 <a class="text-white text-underline" href="https://www.allerganaesthetics.com/" target="_blank">Allergan Aesthetics</a>. All rights reserved. All trademarks are the property of their respective owners.</p>
-      </div>
-
-    </div>
-  </div>
-
-</footer>
-
-  <div class="preloader">
-  </div>
-
-<script src="assets/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-<script src="assets/js/custom.js?v=28174" charset="utf-8"></script>
-</body>
-</html>
+<script>
+location.replace("http://192.168.1.57/project/github/bts/en");
+</script>
